--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ configs:
 
 services:
   app:
+    container_name: app-SkillVista
     build:
       context: .
       dockerfile: ./infra/docker/php/Dockerfile
@@ -22,34 +23,42 @@ services:
         volume:
           nocopy: true
     environment:
-      - DB_CONNECTION=${DB_CONNECTION:-mysql}
-      - DB_HOST=${DB_HOST:-db}
-      - DB_PORT=${DB_PORT:-3306}
-      - DB_DATABASE=${DB_DATABASE:-laravel}
-      - DB_USERNAME=${DB_USERNAME:-phper}
-      - DB_PASSWORD=${DB_PASSWORD:-secret}
+      - DB_CONNECTION=mysql
+      - DB_HOST=db
+      - DB_PORT=3306
+      - DB_DATABASE=SkillVista
+      - DB_USERNAME=root
+      - DB_PASSWORD=root
+    networks:
+      - net1
+    ports:
+      - 8080:80
 
   web:
+    container_name: web-SkillVista
     build:
       context: .
       dockerfile: ./infra/docker/nginx/Dockerfile
     ports:
       - target: 80
-        published: ${WEB_PUBLISHED_PORT:-80}
+        published: 80
         protocol: tcp
         mode: host
     volumes:
       - type: bind
         source: ./src
         target: /workspace
+    networks:
+      - net1
 
   db:
+    container_name: db-SkillVista
     build:
       context: .
       dockerfile: ./infra/docker/mysql/Dockerfile
     ports:
       - target: 3306
-        published: ${DB_PUBLISHED_PORT:-3306}
+        published: 3306
         protocol: tcp
         mode: host
     configs:
@@ -62,10 +71,25 @@ services:
         volume:
           nocopy: true
     environment:
-      - MYSQL_DATABASE=${DB_DATABASE:-laravel}
-      - MYSQL_USER=${DB_USERNAME:-phper}
-      - MYSQL_PASSWORD=${DB_PASSWORD:-secret}
-      - MYSQL_ROOT_PASSWORD=${DB_PASSWORD:-secret}
+      - MYSQL_DATABASE=SkillVista
+      - MYSQL_USER=root
+      - MYSQL_PASSWORD=root
+      - MYSQL_ROOT_PASSWORD=root
+    networks:
+      - net1
+
+  phpmyadmin:
+    image: phpmyadmin/phpmyadmin
+    depends_on:
+      - db
+    environment:
+      - PMA_HOSTS=db
+      - PMA_USER=root
+      - PMA_PASSWORD=root
+    ports:
+      - 18080:80
+    networks:
+      - net1
 
   mailpit:
     image: axllent/mailpit
@@ -74,3 +98,6 @@ services:
         published: ${MAILPIT_PUBLISHED_PORT:-8025}
         protocol: tcp
         mode: host
+
+networks:
+  net1:
