受講前のコース詳細画面、評価の日時以外完了

--- a/src/composer.json
+++ b/src/composer.json
@@ -14,7 +14,8 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "laravel/ui": "^4.2"
+        "laravel/ui": "^4.2",
+        "pbmedia/laravel-ffmpeg": "^8.3"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.9",
