--- a/infra/docker/nginx/default.conf
+++ b/infra/docker/nginx/default.conf
@@ -2,6 +2,7 @@ access_log /dev/stdout main;
 error_log /dev/stderr warn;
 
 server {
+    client_max_body_size 500M;
     listen 80;
     listen [::]:80;
     root /workspace/public;
